Update to bootstrap 5.3, fix whitespace overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden; 
 }
 
 body {
@@ -38,6 +39,7 @@ a {
 /*----------
 # Sections
 ----------*/
+
 .section-container-bg {
     width: 95%;
     max-width: 1650px;
@@ -88,40 +90,40 @@ a {
     padding-top: 40px;
 }
 
-.site-logo-img {
+.navbar-brand {
     width: 100px;
     transition: all ease .3s
 }
 
-.site-logo-img:hover {
+.navbar-brand:hover {
     transform: scale(1.25);
 }
 
-.nav-menu-list li {
+.navbar-nav li {
     position: relative;
 }
 
-.nav-menu-link {
+.nav-link {
     color: var(--white-font);
     font-size: 20px;
     transition: all ease .3s;
 }
 
-.nav-menu-link:hover {
+.nav-link:hover {
     color: var(--lightblue-effect)
 }
 
-.nav-menu-link:after {
+.nav-link:after {
     content: "";
     display: block;
-    margin: 15px auto;
+    margin: 10px auto;
     position: absolute;
     width: 0%;
     transition: width .3s;;
 }
 
-.nav-menu-link:hover:after {
-    left: 65%;
+.nav-link:hover:after {
+    left: 50%;
     width: 55%;
     height: 5px;
     display: block;
@@ -342,6 +344,8 @@ a {
 .card {
     border-radius: 20px;
     background-color: var(--teal-bg);
+    padding: 1.5rem 1.5rem 0;
+    margin: 1rem 0;
 }
 
 @media (max-width: 415px) {
@@ -418,7 +422,8 @@ a {
 ----------*/
 .backtop {
     font-size: 38px;
-    transition: all ease .3s
+    transition: all ease .3s;
+    color: var(--lightblue-effect);
 }
 
 .backtop:hover {
